--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
+    "recharts": "^2.15.3",
     "styled-components": "^6.1.17",
     "tailwindcss": "^4.0.17"
   },
